heptapod-ci: job for Mercurial 4.6
Noticed that some tests don't pass while working on the CI configuration.

Ideally, this changeset should be rebased on top of a revision that
fixes hg-git for Mercurial default, hence validating the fix.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,13 @@ tests-hg-4.7:
       - ./hg version --debug
       - tests/run-tests.py -lv --color=always
 
+tests-hg-4.6:
+    image: octobus/ci-py2-hgext3rd:hg-4.6
+    script:
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
+
 tests-hg-4.5:
     image: octobus/ci-py2-hgext3rd:hg-4.5
     script:
