heptapod-ci: fixed job for Mercurial 4.6 by silencing warnings
Without these two flags, we get the following:

```
  devel-warn: changectx.__init__ is getting more limited, see context.changectxdeprecwarn() for details
  (compatibility will be dropped after Mercurial-4.6, update your code.) at: /tmp/hgtests.ShCiwV/install/lib/python/mercurial/localrepo.py:849 (__contains__)
```

after inspection of the code paths, it turns out that these are self-inflicted
Mercurial warnings. This can be seen with test-clone.t, the whole traceback
does not involve hg-git at all.

So the only practical solution we have is to silence the warnings.
I think it's acceptable as long as it's for this single version and in
particulary not for any version under active development or maintenance.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ tests-hg-4.6:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - tests/run-tests.py -lv --color=always --extra-config-opt devel.all-warnings=no --extra-config-opt devel.deprec-warn=no
 
 tests-hg-4.5:
     image: octobus/ci-py2-hgext3rd:hg-4.5
