--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  PYTHONPATH: /ci/repos/mercurial
+
 before_script:
   - apt-get update && apt-get -y install git-core subversion subversion-tools
   - pip install --user dulwich==0.19.13
@@ -8,75 +11,69 @@ tests-hg-stable:
         - hg pull -R /ci/repos/mercurial/ --rev stable
         - hg -R /ci/repos/mercurial/ update stable
         - hg -R /ci/repos/mercurial summary
-        - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
+        - make -C /ci/repos/mercurial local
+        - cp /ci/repos/mercurial/hg .
+        - tests/run-tests.py -lv --color=always
 
 tests-hg-5.2:
     image: octobus/ci-py2-hgext3rd:hg-5.2
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-5.1:
     image: octobus/ci-py2-hgext3rd:hg-5.1
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-5.0:
     image: octobus/ci-py2-hgext3rd:hg-5.0
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-4.9:
     image: octobus/ci-py2-hgext3rd:hg-4.9
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-4.8:
     image: octobus/ci-py2-hgext3rd:hg-4.8
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-4.7:
     image: octobus/ci-py2-hgext3rd:hg-4.7
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-4.5:
     image: octobus/ci-py2-hgext3rd:hg-4.5
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-4.4:
     image: octobus/ci-py2-hgext3rd:hg-4.4
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
 
 tests-hg-4.3:
     image: octobus/ci-py2-hgext3rd:hg-4.3
     script:
-      - hg -R /ci/repos/mercurial summary
-      - (cd tests; /ci/repos/mercurial/tests/run-tests.py -v --color=always)
-    except:
-        - schedules
-
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
