heptapod-ci: protecting outer commands from PYTHONPATH
All commands that make use of Python and are meant to retrieve or prebuild
code should not themselves use potentially incompatible stuff from
/ci/repos/mercurial.

For instance, updating Mercurial to 'stable' should not risk using a
random version of the mercurial Python package. It must instead use
the one provided system-wide, that is consistent with the `hg` command.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,14 +3,14 @@ variables:
 
 before_script:
   - apt-get update && apt-get -y install git-core subversion subversion-tools
-  - pip install --user dulwich==0.19.13
+  - PYTHONPATH= pip install --user dulwich==0.19.13
 
 tests-hg-stable:
     image: octobus/ci-py2-hgext3rd
     script:
-        - hg pull -R /ci/repos/mercurial/ --rev stable
-        - hg -R /ci/repos/mercurial/ update stable
-        - hg -R /ci/repos/mercurial summary
+        - PYTHONPATH= hg pull -R /ci/repos/mercurial/ --rev stable
+        - PYTHONPATH= hg -R /ci/repos/mercurial/ update stable
+        - PYTHONPATH= hg -R /ci/repos/mercurial summary
         - make -C /ci/repos/mercurial local
         - cp /ci/repos/mercurial/hg .
         - tests/run-tests.py -lv --color=always
