heptapod-ci: a job for current default branch of Mercurial
Currently, the tests fail for this version of Mercurial, hence we'll
add the job once they are fixed.

Ideally, this changeset should be rebased on top of a revision that
fixes hg-git for Mercurial default, hence validating the fix.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,16 @@ before_script:
   - apt-get update && apt-get -y install git-core subversion subversion-tools
   - PYTHONPATH= pip install --user dulwich==0.19.13
 
+tests-hg-default:
+    image: octobus/ci-py2-hgext3rd
+    script:
+        - PYTHONPATH= hg pull -R /ci/repos/mercurial/ --rev default
+        - PYTHONPATH= hg -R /ci/repos/mercurial/ update default
+        - PYTHONPATH= hg -R /ci/repos/mercurial summary
+        - make -C /ci/repos/mercurial local
+        - cp /ci/repos/mercurial/hg .
+        - tests/run-tests.py -lv --color=always
+
 tests-hg-stable:
     image: octobus/ci-py2-hgext3rd
     script:
