--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ variables:
   PYTHONPATH: /ci/repos/mercurial
 
 before_script:
-  - apt-get update && apt-get -y install git-core subversion subversion-tools
+  - apt-get update
+  - apt-get -y install git-core subversion subversion-tools openssh-client
   - PYTHONPATH= pip install --user dulwich==0.19.13
 
 tests-hg-default:
