heptapod-ci: added a test job against Mercurial 5.3
As usual, this is the latest released version.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,13 @@ tests-hg-stable:
         - cp /ci/repos/mercurial/hg .
         - tests/run-tests.py -lv --color=always
 
+tests-hg-5.3:
+    image: octobus/ci-py2-hgext3rd:hg-5.3
+    script:
+      - cp /ci/repos/mercurial/hg .
+      - ./hg version --debug
+      - tests/run-tests.py -lv --color=always
+
 tests-hg-5.2:
     image: octobus/ci-py2-hgext3rd:hg-5.2
     script:
