--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,9 @@ tests-py2-hg-default:
         - PYTHONPATH= hg pull -R /ci/repos/mercurial/ --rev default
         - PYTHONPATH= hg -R /ci/repos/mercurial/ update default
         - PYTHONPATH= hg -R /ci/repos/mercurial summary
-        - make -C /ci/repos/mercurial local
+        - make -C /ci/repos/mercurial local PYTHON=python2
         - cp /ci/repos/mercurial/hg .
-        - tests/run-tests.py -lv --color=always
+        - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-stable:
     stage: compat
@@ -23,9 +23,9 @@ tests-py2-hg-stable:
         - PYTHONPATH= hg pull -R /ci/repos/mercurial/ --rev stable
         - PYTHONPATH= hg -R /ci/repos/mercurial/ update stable
         - PYTHONPATH= hg -R /ci/repos/mercurial summary
-        - make -C /ci/repos/mercurial local
+        - make -C /ci/repos/mercurial local PYTHON=python2
         - cp /ci/repos/mercurial/hg .
-        - tests/run-tests.py -lv --color=always
+        - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-5.3:
     stage: current
@@ -33,7 +33,7 @@ tests-py2-hg-5.3:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-5.2:
     stage: compat
@@ -41,7 +41,7 @@ tests-py2-hg-5.2:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-5.1:
     stage: compat
@@ -49,7 +49,7 @@ tests-py2-hg-5.1:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-5.0:
     stage: compat
@@ -57,7 +57,7 @@ tests-py2-hg-5.0:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-4.9:
     stage: compat
@@ -65,7 +65,7 @@ tests-py2-hg-4.9:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-4.8:
     stage: compat
@@ -73,7 +73,7 @@ tests-py2-hg-4.8:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-4.7:
     stage: compat
@@ -81,7 +81,7 @@ tests-py2-hg-4.7:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-4.6:
     stage: compat
@@ -89,7 +89,7 @@ tests-py2-hg-4.6:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always --extra-config-opt devel.all-warnings=no --extra-config-opt devel.deprec-warn=no
+      - python2 tests/run-tests.py -lv --color=always --extra-config-opt devel.all-warnings=no --extra-config-opt devel.deprec-warn=no
 
 tests-py2-hg-4.5:
     stage: compat
@@ -97,7 +97,7 @@ tests-py2-hg-4.5:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-4.4:
     stage: compat
@@ -105,7 +105,7 @@ tests-py2-hg-4.4:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
 
 tests-py2-hg-4.3:
     stage: compat
@@ -113,4 +113,4 @@ tests-py2-hg-4.3:
     script:
       - cp /ci/repos/mercurial/hg .
       - ./hg version --debug
-      - tests/run-tests.py -lv --color=always
+      - python2 tests/run-tests.py -lv --color=always
