--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,11 +30,10 @@ Latest:
   parallel:
     matrix:
       - PYTHON:
-          - "2.7"
           - "3.5"
           - "3.9"
         HG:
-          - "5.6"
+          - "5.7"
 
 # This is the authoritative list of versions of Mercurial that this
 # extension is supported and tested with; it should be kept in sync
@@ -42,35 +41,22 @@ Latest:
 #
 # Versions prior to the version that ships in the latest Ubuntu LTS
 # release (4.5.3 for 18.04; 5.3.1 for 20.04) may be dropped if they
-# interfere with new development. The latest released minor version
-# should be listed for each major version; earlier minor versions are
-# not needed.
+# are older than a year and interfere with new development. The latest
+# released minor version should be listed for each major version;
+# earlier minor versions are not needed.
 Supported:
   extends: .base
   stage: compat
   retry: 1
   parallel:
     matrix:
-      - PYTHON: "2.7"
-        HG:
-          - "4.4"
-          - "4.5"
-          - "4.6"
-          - "4.7"
-          - "4.8"
-          - "4.9"
-          - "5.0"
-          - "5.1"
-          - "5.2"
-          - "5.3"
-          - "5.4"
-          - "5.5"
       - PYTHON: "3.9"
         HG:
           - "5.2"
           - "5.3"
           - "5.4"
           - "5.5"
+          - "5.6"
 
 # Test that it is possible to use and run hg-git on Ubuntu without
 # compiling any C code, i.e. with stock Dulwich, Mercurial and
@@ -100,7 +86,6 @@ Development:
   parallel:
     matrix:
       - PYTHON:
-          - "2.7"
           - "3.9"
         HG:
           - "stable"
@@ -141,18 +126,6 @@ Release images:
   parallel:
     matrix:
       - PYTHON:
-          - "2.7"
-        HG:
-          - "4.4"
-          - "4.5"
-          - "4.6"
-          - "4.7"
-          - "4.8"
-          - "4.9"
-          - "5.0"
-          - "5.1"
-      - PYTHON:
-          - "2.7"
           - "3.9"
         HG:
           - "5.2"
@@ -160,7 +133,6 @@ Release images:
           - "5.4"
           - "5.5"
       - PYTHON:
-          - "2.7"
           - "3.5"
           - "3.9"
         HG:
@@ -174,7 +146,6 @@ Current images:
   parallel:
     matrix:
       - PYTHON:
-          - "2.7"
           - "3.9"
         HG:
           - "default"
