ci: retry failing jobs
The compatibility tests occasionally fail. To work around this, we
simply set the tests to retry once. Given that each test run is quite
short, we can safely retry them. We do so only once to begin with, but
to be safe, I've also added a timeout so that a hanging job isn't left
running for half an hour.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,8 @@ Latest:
 Supported:
   stage: compat
   image: registry.heptapod.net:443/mercurial/hg-git/ci:py$PYTHON-hg-$HG
+  retry: 1
+  timeout: 5m
   script:
     - python$PYTHON tests/run-tests.py -v --color=always
   parallel:
