ci: fix XML report path
Due to a bug in `run-tests.py`, relative paths are to the test
directory, not the current directory. Work around this by specifying
an absolute path, so that we don't break if it's fixed.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ Latest:
   stage: current
   image: registry.heptapod.net:443/mercurial/hg-git/ci:py$PYTHON-hg-$HG
   script:
-    - python$PYTHON tests/run-tests.py --xunit tests.xml -v --color=always
+    - python$PYTHON tests/run-tests.py -v --xunit $PWD/tests-$PYTHON-$HG.xml --color=always
   parallel:
     matrix:
       - PYTHON:
