--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ Supported:
   retry: 1
   timeout: 5m
   script:
-    - python$PYTHON tests/run-tests.py -v --color=always
+    - python$PYTHON tests/run-tests.py -v --xunit $PWD/tests-$PYTHON-$HG.xml --color=always
   parallel:
     matrix:
       - PYTHON: "2.7"
@@ -61,6 +61,9 @@ Supported:
           - "5.3"
           - "5.4"
           - "5.5"
+  artifacts:
+    reports:
+      junit: tests-$PYTHON-$HG.xml
 
 # Test that it is possible to use and run hg-git on Ubuntu without
 # compiling any C code, i.e. with stock Dulwich, Mercurial and
@@ -77,7 +80,10 @@ Ubuntu:
         apt-get -qq install --no-install-recommends
         gnupg gnupg-agent git unzip ssh
         mercurial python3-dulwich python3-setuptools pyflakes3
-      - python3 tests/run-tests.py -v --color=always
+      - python3 tests/run-tests.py -v --xunit $PWD/tests-ubuntu.xml --color=always
+    artifacts:
+      reports:
+        junit: tests-ubuntu.xml
 
 # Test that the tests pass against the current branches
 Development:
@@ -85,7 +91,7 @@ Development:
   allow_failure: true
   image: registry.heptapod.net:443/mercurial/hg-git/ci:py$PYTHON-hg-$HG
   script:
-    - python$PYTHON tests/run-tests.py -v --color=always
+    - python$PYTHON tests/run-tests.py --xunit $PWD/tests-$PYTHON-$HG.xml -v --color=always
   parallel:
     matrix:
       - PYTHON:
@@ -94,6 +100,9 @@ Development:
         HG:
           - "stable"
           - "default"
+  artifacts:
+    reports:
+      junit: tests-$PYTHON-$HG.xml
 
 # Build images for the above tasks; this should be a scheduled job, as
 # it is quite unnecessary to run on every invocation.
