--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,10 @@ Ubuntu:
         gnupg gnupg-agent git unzip ssh mercurial
         python3-pygments python3-coverage python3-dulwich python3-setuptools
         pyflakes3
+      - useradd test
+      - chown -R test *
       - >
+        runuser -u test --
         python3 tests/run-tests.py -v --color=always
         --xunit $PWD/tests-$CI_JOB_ID.xml --cover
       - mv tests/.coverage coverage-$CI_JOB_ID
