--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -233,32 +233,78 @@ Git service image:
       --cleanup
       --destination registry.heptapod.net:443/mercurial/hg-git/git-server
 
-Linux x86-64 wheels:
-  image: quay.io/pypa/manylinux2014_x86_64
+x86 Wheels:
+  image: quay.io/pypa/${PLATFORM}
+  timeout: 15m
   stage: archives
   only:
     - tags
+  variables:
+    PYPI_REPOSITORY: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi
   script:
     - yum install -y gettext
     - |
-      for pythondir in /opt/python/*
+      cat > ~/.pypirc <<EOF
+      [distutils]
+      index-servers =
+        gitlab
+
+      [gitlab]
+      repository = ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi
+      username = gitlab-ci-token
+      password = ${CI_JOB_TOKEN}
+      EOF
+    - |
+      for pythondir in /opt/python/${ABI}*
       do
-        $pythondir/bin/pip install docutils
-        $pythondir/bin/pip wheel --no-binary :all: -w wheelhouse mercurial .
+        # setuptools_scm needs hg in its path
+        export PATH=$pythondir/bin:$PATH
+        $pythondir/bin/pip install docutils pygments mercurial twine
+        $pythondir/bin/pip wheel -w wheelhouse mercurial .
       done
     - |
       for whl in wheelhouse/*-linux_*.whl
       do
-        auditwheel repair $whl
+        auditwheel repair --plat ${PLATFORM} -w wheelhouse $whl
+        rm -v $whl
       done
-    - rm -v wheelhouse/*-linux_*.whl
-    - mv -v wheelhouse/*.whl .
+    # rely on our PATH adjustment above
+    - |
+      for whl in wheelhouse/*-${PLATFORM}.whl wheelhouse/hg_git-*.whl
+      do
+        twine upload \
+          --disable-progress-bar --verbose --skip-existing \
+          --repository gitlab \
+          $whl \
+          && echo "upload of $whl success" \
+          || echo "upload of $whl failed"
+      done
   artifacts:
     paths:
-      - "*.whl"
+      - wheelhouse
+  parallel:
+    matrix:
+      - PLATFORM: manylinux2010_x86_64
+        ABI:
+          - cp27
+      - PLATFORM: manylinux2014_x86_64
+        ABI:
+          - cp35
+          - cp36
+          - cp37
+          - cp38
+          - cp39
 
-Linux ARM64 wheels:
-  extends: "Linux x86-64 wheels"
-  image: quay.io/pypa/manylinux2014_aarch64
+ARM Wheels:
+  extends: "x86 Wheels"
   tags:
     - arm64
+  parallel:
+    matrix:
+      - PLATFORM: manylinux2014_aarch64
+        ABI:
+          - cp35
+          - cp36
+          - cp37
+          - cp38
+          - cp39
